hphp/hack/test/extended_reasons/assign_list.php.exp
error: Typing[4110] Invalid argument [1]
-> Expected Sub [2]
-> But got Super [3]
-> Unnormalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rhint":[{"filename":"assign_list.php","line":8,"char_start":24,"char_end":28}]
        },
        {
          "Rtype_variable":[{"filename":"assign_list.php","line":9,"char_start":12,"char_end":13}]
        }
      ]
    },
    {
      "Rhint":[{"filename":"assign_list.php","line":6,"char_start":14,"char_end":16}]
    }
  ]
} [3]
-> Normalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rhint":[{"filename":"assign_list.php","line":8,"char_start":24,"char_end":28}]
        },
        {
          "Rtype_variable":[{"filename":"assign_list.php","line":9,"char_start":12,"char_end":13}]
        }
      ]
    },
    {
      "Rhint":[{"filename":"assign_list.php","line":6,"char_start":14,"char_end":16}]
    }
  ]
} [3]
-> Path:
[
  {
    "Rhint":[{"filename":"assign_list.php","line":8,"char_start":24,"char_end":28}]
  },
  {"Fwd":[]},
  {
    "Rtype_variable":[{"filename":"assign_list.php","line":9,"char_start":12,"char_end":13}]
  },
  {"Fwd":[]},
  {
    "Rhint":[{"filename":"assign_list.php","line":6,"char_start":14,"char_end":16}]
  }
] [3]

assign_list.php:10:7
     4 | class Sub extends Super {}
     5 | 
[2]  6 | function foo(Sub $_): void {}
     7 | 
[3]  8 | function bar_1((string,Super,bool) $xyz): void {
     9 |   list($_, $y, $_) = $xyz;
[1] 10 |   foo($y);
    11 | }

1 error found.
