hphp/hack/test/extended_reasons/assign_list.php
<?hh

class Super {}
class Sub extends Super {}

function foo(Sub $_): void {}

function bar_1((string,Super,bool) $xyz): void {
  list($_, $y, $_) = $xyz;
  foo($y);
}
